# nearcast

./: .gitignore  README.md  package.json  vite.config.js
backend/: config.js  server.js
backend/routes/: api.js
backend/scripts/: create-markets.js  fill-remaining.js
backend/services/: ai-client.js  chat.js  market-validator.js  near.js  oracle.js  outlayer-relayer.js  reclaim-resolver.js  spending-tracker.js  sports-api.js  tls-relayer.js
contract/: package.json  tsconfig.json
contract-rs/: Cargo.toml  build.sh
contract-rs/src/: lib.rs
contract/src/: contract.ts
docs/: llm-oracle-provenance.md
frontend/: App.jsx  index.html  near-wallet.js
scripts/: create-10-markets.js  seed-bets.js  seed-existing.js  seed-markets.js
tests/: test-ai-compare.js
worker/: Cargo.toml
worker/src/: main.rs
