[package]
name = "nearcast-espn-oracle"
version = "0.1.0"
edition = "2021"
description = "Permissionless ESPN sports oracle for NearCast — runs inside OutLayer TEE"

[[bin]]
name = "nearcast-espn-oracle"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasi-http-client = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
